Fix alignment issue

--- a/static/less/pages/course/courseware.less
+++ b/static/less/pages/course/courseware.less
@@ -153,7 +153,7 @@
                     }
 
                     &.next {
-                        right: 0;
+                        right: 1px;
                         border-left: 0 none;
                     }
 
